commiting -- disable copy timesheet button for admin

--- a/TM.RestHour/Views/TimeSheet/Index.cshtml
+++ b/TM.RestHour/Views/TimeSheet/Index.cshtml
@@ -107,7 +107,7 @@
 
 									<div class="col-md-4" style="margin-top:14px; padding: 0 0px 0 18px;">
 
-										<button class="button1" type="button" id="btnCopyTimeSheet" style="width:142px;">Copy Time Sheet</button>
+										<button class="button1" type="button" id="btnCopyTimeSheet" style="width:142px;" disabled="disabled">Copy Time Sheet</button>
 									</div>
 								</div>
 							</form>
