--- a/TM.RestHour/Views/help/index.cshtml
+++ b/TM.RestHour/Views/help/index.cshtml
@@ -37,7 +37,7 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTen">
-                                    Admin Menu                                  
+                                    Admin Menu
                                 </a>
                             </h4>
                         </div>
@@ -65,7 +65,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseone">Time Sheet</a>
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseone">Time Sheet For User</a>
                             </h4>
                         </div>
                         <div id="collapseone" class="panel-collapse collapse">
@@ -75,7 +75,7 @@
                                 <img src="~/background/HTimeSheetUser.png" style="width: 100%; float: right;" width="42" height="400">
                                 <p>
                                     <strong>1</strong>: User needs to select the date in which he wants to fill his timesheet
-</p>
+                                </p>
                                 <p>
                                     <strong>2</strong>: User needs to enter his timesheet data here ( start time and end time ) of the work he has done the selected day. User can enter his work data in three slots is required. For example, in the picture give below the user  has worked on 13th February 2019 for the following hours
                                 </p>
@@ -135,6 +135,80 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsetwo1">Manage Vessel Details</a>
+                            </h4>
+                        </div>
+                        <div id="collapsetwo1" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                In this page we can see the current Vessel, Flag, IMO Number.
+                                <img src="~/background/HManageVesselDetails.jpg" style="width: 100%; float: right;" width="42" height="300">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsetwo11">Reset Password</a>
+                            </h4>
+                        </div>
+                        <div id="collapsetwo11" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                In this page we can Reset the Password.
+                                <img src="~/background/HResetPassword.png" style="width: 100%; float: right;" width="42" height="400">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsetwo111">Monthly Work Hours(Report)</a>
+                            </h4>
+                        </div>
+                        <div id="collapsetwo111" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                In this page a crew can see his own Work Hours by Month.
+                                <img src="~/background/HMonthlyWorkHours.png" style="width: 100%; float: right;" width="42" height="300">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsetwo1111">Compliance Report(Report)</a>
+                            </h4>
+                        </div>
+                        <div id="collapsetwo1111" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                In this page a crew can see his own Compliance Report by Month.
+                                <img src="~/background/HComplianceReport.png" style="width: 100%; float: right;" width="42" height="300">
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
                                 <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsetwo">Add Crew</a>
                             </h4>
                         </div>
@@ -142,7 +216,6 @@
                             <div class="panel-body">
                                 Admin can add a crew member here
                                 <img src="~/background/HAddCrew.png" style="width: 100%; float: right;" width="42" height="500">
-
                             </div>
                         </div>
                     </div>
@@ -167,7 +240,7 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsefour">
-                                    Crew Import
+                                    Crew Import.....................
 
                                 </a>
                             </h4>
