--- a/TM.RestHour/Views/help/index.cshtml
+++ b/TM.RestHour/Views/help/index.cshtml
@@ -141,7 +141,7 @@
                         <div id="collapsetwo1" class="panel-collapse collapse">
                             <div class="panel-body">
                                 In this page we can see the current Vessel, Flag, IMO Number.
-                                <img src="~/background/HManageVesselDetails.jpg" style="width: 100%; float: right;" width="42" height="300">
+                                <img src="~/background/HManageVesselDetails.png" style="width: 100%; float: right;" width="42" height="300">
                             </div>
                         </div>
                     </div>
@@ -204,7 +204,21 @@
 
 
 
-
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsethree">
+                                    Crew Import
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapsethree" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <p>An Admin user can import multiple crew directly into the system via this facility.  The user first needs to download the excel template by clicking the Download Excel button. On clicking this button, an excel file would be downloaded in the user’s system. User will now fill in details of the crew that needs to be imported into the system in the downloaded excel file.  Once all the crew data are filled in , and the excel is saved, user would need to first click Choose File button and select the saved excel file. Then the user would need to click Upload button in order to import crew data into the system. The user now need to wait a few minutes to let the system import all the data from the excel file into the system before navigating to any other page in the application.</p>
+                                <img src="~/background/HCrewInport.jpg" style="width: 100%; float: right;" width="42" height="500">
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="panel panel-default">
                         <div class="panel-heading">
@@ -214,24 +228,12 @@
                         </div>
                         <div id="collapsetwo" class="panel-collapse collapse">
                             <div class="panel-body">
-                                Admin can add a crew member here
                                 <img src="~/background/HAddCrew.png" style="width: 100%; float: right;" width="42" height="500">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsethree">
-                                    Crew List
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapsethree" class="panel-collapse collapse">
-                            <div class="panel-body">
-                                Admin can see all the crew of Active Users and Inactive Users.
-                                <img src="~/background/HCrewList.png" style="width: 100%; float: right;" width="42" height="500">
+                                <p>
+                                    An Admin user can add crew via this page. If the Admin user wishes to put the crew in some Department then the admin user will need to first enter a department from the department screen. The Department screen allows entering department name only without selecting any user. Once that is entered, the admin user can come to the above screen and key in the details needed. The admin user will then click Add/Update Crew to save this crew data. Once data is saved the screen automatically redirects to the following screen
+                                </p>
+                                <img src="~/background/HLoginRi.png" style="width: 100%; float: right;" width="42" height="500">
+                                <p>The Username box is prepopulated with a username for the crew just entered in. The admin user can change this username ( this needs to be unique ) . The admin user needs to key in the password and confirm password for the user. The Group dropdown has different groups ( Admin & User) that this crew will belong to. The admin user can select the group as needed . Once all data are keyed in, the user will click Save to save this data. </p>
                             </div>
                         </div>
                     </div>
@@ -240,15 +242,14 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsefour">
-                                    Crew Import.....................
-
+                                    Crew List
                                 </a>
                             </h4>
                         </div>
                         <div id="collapsefour" class="panel-collapse collapse">
                             <div class="panel-body">
-                                With the advent of internet and personal computers, the good old era of evening smoke room get together’s has greatly reduced on most ships. Try not to stay confined in your cabin after work. Make it a point to mix around and socialise. The more you stay separated from everyone, the lonelier it can get. The sea is a hostile place to work and we all need help often. Being a social animal and having people to like you can be a great way to make your life easier.<br /> Playing games can be another good way to socialise
-
+                                In this page a Admin can see all Active and InActive Users.
+                                <img src="~/background/HCrewList.png" style="width: 100%; float: right;" width="42" height="500">
                             </div>
                         </div>
                     </div>
@@ -257,16 +258,14 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsefive">
-                                    Eat Healthy
-
-
+                                    Crew Service Terms
                                 </a>
                             </h4>
                         </div>
                         <div id="collapsefive" class="panel-collapse collapse">
                             <div class="panel-body">
-                                Binging on junk and unhealthy food make your mind and body less able to take the stress out of your work. Ensure that you follow a balanced diet on board. Go easy on those beers (applicable to only those lucky enough to still have alcohol on board) and soft drinks. Unnecessary calories should be avoided. Those extra calories will not only make you unfit, but could be detrimental .
-
+                                xxxxxxxxxxxxxxxxxxxxxxxxxxx
+                                <img src="~/background/HCrewServiceTerms.png" style="width: 100%; float: right;" width="42" height="400">
                             </div>
                         </div>
                     </div>
@@ -275,14 +274,14 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsesix">
-                                    Meditate / Pray
+                                    Department
                                 </a>
                             </h4>
                         </div>
                         <div id="collapsesix" class="panel-collapse collapse">
                             <div class="panel-body">
-                                Prayers have a very solemn influence on our minds. It gives us perspective and keeps the mind at peace. Even a short prayer after waking up can be a great way to kick start a demanding work day. For those who aren’t really religious, simple meditation techniques such as breathing, voice aided meditation etc. can help to remain calm, focussed and motivated. Some people perform Yoga which combines exercises and meditation. Whatever works for you must be made a part of your daily activities.
-
+                                In this page we can Add, Update and Delete a Department.
+                                <img src="~/background/HDepartment.png" style="width: 100%; float: right;" width="42" height="400">
                             </div>
                         </div>
                     </div>
@@ -291,14 +290,14 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseseven">
-                                    Watch good movies and Documentaries
-
+                                    Manage Rank
                                 </a>
                             </h4>
                         </div>
                         <div id="collapseseven" class="panel-collapse collapse">
                             <div class="panel-body">
-                                Watching movies is a great way to relax. But do not let it become the only way you spend your free time. Carry a good collection of documentary, movies that interest you. It will only help you enhance your knowledge. But preferably watch them in group or in company of other colleagues
+                                In this page we can Add, Update and Delete a Rank.
+                                <img src="~/background/HManageRank.png" style="width: 100%; float: right;" width="42" height="400">
 
                             </div>
                         </div>
@@ -308,15 +307,14 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseight">
-                                    Watch good movies and Documentaries
-
+                                    Regime
                                 </a>
                             </h4>
                         </div>
                         <div id="collapseight" class="panel-collapse collapse">
                             <div class="panel-body">
-                                Watching movies is a great way to relax. But do not let it become the only way you spend your free time. Carry a good collection of documentary, movies that interest you. It will only help you enhance your knowledge. But preferably watch them in group or in company of other colleagues
-
+                                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                                <img src="~/background/HRegime.png" style="width: 100%; float: right;" width="42" height="400">
                             </div>
                         </div>
                     </div>
@@ -325,15 +323,14 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsenine">
-                                    Build up on your hobbies
-
+                                    Mail Server Details
                                 </a>
                             </h4>
                         </div>
                         <div id="collapsenine" class="panel-collapse collapse">
                             <div class="panel-body">
-                                A lot of us think that when we are out at sea, we should not indulge in hobbies that we like. But it is in fact the other way round. Do what your heart pleases. Some people like writing while some others prefer cooking. Do not hold yourself back on doing anything that you like. People with interest in photography should consider investing in a good camera. The sea presents some of the best opportunities to take spectacular photographs.
-
+                                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                                <img src="~/background/HMailServerDetails.png" style="width: 100%; float: right;" width="42" height="400">
                             </div>
                         </div>
                     </div>
@@ -342,15 +339,14 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseaa">
-                                    Play by the Rules
-
+                                    Reset Password
                                 </a>
                             </h4>
                         </div>
                         <div id="collapseaa" class="panel-collapse collapse">
                             <div class="panel-body">
-                                Human are bound to have temptation to bend the rules every once in a while to get out of a situation. Bending rules will be of absolutely no good for you professionally and will only cause problems in the longer run. Your mind will never be at ease knowing that you are doing something which is wrong. What’s worse is that some people have the wrong notion that they are helping out their companies by doing illegal things such as pumping out bilges or hiding dangerous defects. This false sense of loyalty is very dangerous and should be chucked out of your system soonest possible. Companies will never support you if you are in the wrong knowingly. All the sweat, blood and grime that has gone into building your career will come to a naught by one senseless act. Playing by the rules might require a little bit of extra effort in the short term, but will ensure that your conscience remains clear. A clear conscience will only help you remain stress free, focused and motivated.
-
+                                In this page we can Reset the Password.
+                                <img src="~/background/HResetPassword.png" style="width: 100%; float: right;" width="42" height="400">
                             </div>
                         </div>
                     </div>
@@ -359,20 +355,45 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsebb">
-                                    Fake it till you Make it
-
-
+                                    Time Adjustment
                                 </a>
                             </h4>
                         </div>
                         <div id="collapsebb" class="panel-collapse collapse">
                             <div class="panel-body">
-                                We all face times when no amount of pep talk or any of the above activities help. In such situations, it is best to just pretend to have a positive outlook. Force yourself to have a positive body language. Lie to yourself that you are motivated, driven and kicked. Eventually, this will become your normal outlook and things will automatically fall in place. Coming out of the rut is very important
-
+                                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                                <img src="~/background/HResetPassword.png" style="width: 100%; float: right;" width="42" height="400">
                             </div>
                         </div>
                     </div>
 
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsetwo1119">Manage Vessel Details(For Admin)</a>
+                            </h4>
+                        </div>
+                        <div id="collapsetwo1119" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                In this page we can see the current Vessel, Flag, IMO Number.
+                                <img src="~/background/HManageVesselDetails.png" style="width: 100%; float: right;" width="42" height="300">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsetwo1119">Manage Vessel Details(For Admin)</a>
+                            </h4>
+                        </div>
+                        <div id="collapsetwo1119" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                In this page we can see the current Vessel, Flag, IMO Number.
+                                <img src="~/background/HManageVesselDetails.png" style="width: 100%; float: right;" width="42" height="300">
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
             </div>
